Sutter Health/src/objects/Patient_Account__c.object
<CustomObject>
    <description>Patient Account allows a many-to-many relationship between Patient and Guarantor records.</description>
    <fields>
        <fullName>Guarantor_ID_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated guarantor record for a specific patient account.</description>
        <label>Guarantor</label>
        <referenceTo>Guarantor__c</referenceTo>
        <relationshipLabel>Patient Accounts</relationshipLabel>
        <relationshipName>Patient_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guarantor_ID__c</fullName>
        <label>Guarantor ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Account_Admission_Date__c</fullName>
        <label>Patient Account Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_Account_Number__c</fullName>
        <description>External ID used to match patient account record to its equivalent in the source system when updating and/or inserting.</description>
        <externalId>true</externalId>
        <label>Patient Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Account_Service_Location__c</fullName>
        <label>Patient Account Service Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_DotOne_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated patient record for a specific patient account.</description>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Patient Accounts</relationshipLabel>
        <relationshipName>Patient_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_DotOne__c</fullName>
        <label>Patient DotOne</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Patient Account</label>
    <nameField>
        <label>Patient Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>